[package]
name = "baiduyun_api"
license = "MIT"
authors = ["flyer <2350827470@qq.com>"]
description = "baiduyun_api Rust Version"
version = "0.2.2"
repository = "https://github.com/hfh1999/baiduyun_api"
edition = "2018"
keywords = ["baiduyun", "api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json","cookies"] }
serde_json = "1.0.64"
serde = "1.0.126"