[package]
name = "baiduyun_api"
license = "MIT"
authors = ["flyer <2350827470@qq.com>"]
description = "baiduyun_api Rust Version"
version = "0.2.4"
repository = "https://github.com/hfh1999/baiduyun_api"
edition = "2018"
keywords = ["baiduyun", "api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json","cookies"] }
serde = "1.0.126"
serde_json = "1.0.64"
serde_qs = "0.10.1"
curl = "0.4.44"
md5 = "0.7.0"
data-encoding = "2.3.3"
urlencoding = "2.1.2"
